# MinaSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  traces.json
results/: ablation_study.json  accelerate_effectiveness.json  cluster_state_baseline.json  cluster_state_mina.json  job_placement.json  large_scale_simulation.json  sharing.json  traces.json  tree_building.json  tree_conflict_trace.json
scripts/: check_font_type3.py  run_all_scripts.py  visualize_accelerate_effectiveness.py  visualize_cluster_state.py  visualize_job_placement.py  visualize_large_scale_simulation.py  visualize_sharing_policy.py  visualize_traces.py  visualize_tree_building.py  visualize_tree_conflicts.py
src/: allocation_controller.cpp  allocation_controller.hpp  data.cpp  data.hpp  fat_tree.cpp  fat_tree.hpp  fat_tree_resource.cpp  fat_tree_resource.hpp  job.cpp  job.hpp  job_allocator.hpp  main.cpp  sharing_group.cpp  sharing_group.hpp  trace.cpp  trace.hpp  utils.hpp
src/allocation_methods/: host_tree.hpp
src/experiments/: ablation_study.cpp  accelerate_effectiveness.cpp  experiments.hpp  job_placement.cpp  large_scale_simulation.cpp  output_traces.cpp  record_cluster_state.cpp  sharing.cpp  sharing_overhead.cpp  tree_building.cpp  tree_conflicts.cpp
src/host_allocation_policies/: first.cpp  first.hpp  random.cpp  smart.hpp
src/sharing_policies/: greedy.cpp  greedy.hpp  non_sharp.hpp  smart.cpp  smart.hpp
src/tree_building_policies/: first.cpp  first.hpp  random.cpp  random.hpp  smart.cpp  smart.hpp
src/utils/: graph.cpp  graph.hpp  mean_std_tracker.cpp  mean_std_tracker.hpp  (+5 more)
(+6 files in other folders)
